--- a/apoie.html
+++ b/apoie.html
@@ -23,9 +23,9 @@
         <ul class="lista">
           <li><a href="./form-contato.html">Contate-nos</a></li>
           <li><a href="./apoie.html">Participe da Causa</a></li>
-          <li><a href="">Cultivo Eficiente</a></li>
-          <li><a href="">IA Generativa</a></li>
-          <li><a href="">Agricultura Sustentável</a></li>
+          <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+          <li><a href="./IA.html">IA Generativa</a></li>
+          <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         </ul>
 
       </nav>
@@ -34,9 +34,9 @@
         <input type="checkbox" id="menu_toggle">
         <label class="menu_btn" for="menu_toggle"><span></span></label>
         <ul class="menu_box">
-          <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
-          <li><a class="menu_item" href="#">IA Generativa</a></li>
-          <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+          <li><a class="menu_item" href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+          <li><a class="menu_item" href="./IA.html">IA Generativa</a></li>
+          <li><a class="menu_item" href="./CULTIVO.html">Cultivo Eficiente</a></li>
           <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
           <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
         </ul>
@@ -44,7 +44,7 @@
 
     </header>
 
-    <img class="ft-principal" src="./img/generate an ima 1.png" alt="">
+    <img class="ft-principal" src="./img/generate an ima 1.png" alt="imagem dividida em quatro blocos com vários tipos de comida em cada">
 
     <section class="sec1">
 
@@ -62,17 +62,17 @@
         <div class="conteudo">
 
           <div class="quadrado-info">
-            <img class="img" src="./img/image 2.png" alt="">
-            <h2>Formulário do Agricultor</h2>
+            <img class="img" src="./img/image g.png" alt="imagem de um agricultor andando na plantação">
+            <h2>Formulário do Fornecedor</h2>
             <p>O primeiro passo para participar do projeto é o cadastro de você fornecedor no site. Aqui será pedido informações sobre suas fazendas/locais de produção incluindo a localização geográfica e etc.</p>
-            <a class="botao" href="/">Preencher</a>
+            <a class="botao" href="./form1.html">Preencher</a>
           </div>
           
           <div class="quadrado-info">
-            <img class="img" src="./img/image 4.png" alt="">
+            <img class="img" src="./img/image 4.png" alt="imagem de uma faxada de uma secretaria de educação">
             <h2>Formulário da Secretaria</h2>
             <p>Para você participar do projeto como Secretaria é necessário fazer o cadastro. Aqui será pedido informações sobre sua empresa  incluindo a localização geográfica, escolas que representa, entre outras.</p>
-            <a class="botao" href="/">Preencher</a>
+            <a class="botao" href="./form2.html">Preencher</a>
           </div>  
 
         </div>
@@ -80,12 +80,13 @@
       </article>
 
     </section>
+    
   </main>
   
 
   <footer>
 
-    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
+    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo">
 
     <h2>RM dos Integrantes</h2>
 
@@ -100,10 +101,10 @@
 
       <ul class="links-footer">
         <li><a href="./form-contato.html">Contate-nos</a></li>
-        <li><a href="">Cultivo Eficiente</a></li>
+        <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
         <li><a href="./apoie.html"> Participe da Causa</a></li>
-        <li><a href="">IA Generativa</a></li>
-        <li><a href="">Agricultura Sustentável</a></li>
+        <li><a href="./IA.html">IA Generativa</a></li>
+        <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
       </ul>
 
