--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
   <header>
     <nav class="links">
-      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
+      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo"></a>
 
       <ul class="lista">
         <li><a href="./form-contato.html">Contate-nos</a></li>
         <li><a href="./apoie.html">Participe da Cusa</a></li>
-        <li><a href="">Cultivo Eficiente</a></li>
-        <li><a href="">IA Generativa</a></li>
-        <li><a href="">Agricultura Sustentável</a></li>
+        <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+        <li><a href="./IA.html">IA Generativa</a></li>
+        <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
       </ul>
 
     </nav>
@@ -32,9 +32,9 @@
       <input type="checkbox" id="menu_toggle">
       <label class="menu_btn" for="menu_toggle"><span></span></label>
       <ul class="menu_box">
-        <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
-        <li><a class="menu_item" href="#">IA Generativa</a></li>
-        <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+        <li><a class="menu_item" href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+        <li><a class="menu_item" href="./IA.html">IA Generativa</a></li>
+        <li><a class="menu_item" href="./CULTIVO.html">Cultivo Eficiente</a></li>
         <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
         <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
       </ul>
@@ -54,7 +54,7 @@
 </section>
   <main>
     <section class="a1">
-      <img class="fome-inicio" src="./img/fome-foto-inicial.png" alt="">
+      <img class="fome-inicio" src="./img/fome-foto-inicial.png" alt="imagem de várias crianças olhando pra cima">
     </section>
     <section class="a2">
       <h2 class="titulo1">A Fome Global Continua Sendo um Desafio Crítico</h2>
@@ -75,16 +75,16 @@
       <div class="textos">
         <p>Os números revelam uma realidade alarmante. Em 2021, aproximadamente 9,8% da população mundial foi afetada pela fome, em comparação com 8% em 2019. Além disso, 2,3 bilhões de pessoas (29,3% da população global) enfrentaram insegurança alimentar moderada ou grave, um aumento de 350 milhões desde o início da pandemia de covid-19. A desigualdade de gênero na insegurança alimentar também aumentou, afetando 31,9% das mulheres em comparação com 27,6% dos homens.</p>
       </div>
-      <img class="grafico" src="./img/fome-no-mundo.jpeg" alt="">
-      <img class="graficos" src="./img/inseguransa-alimentar.jpeg" alt="">
+      <img class="grafico" src="./img/fome-no-mundo.jpeg" alt="imagem de um grafico sobre insegurança alimentar">
+      <img class="graficos" src="./img/inseguransa-alimentar.jpeg" alt="imagem de um segundo gráfico sobre insegurança alimentar">
 
       <div class="textos">
         <p> No Brasil, a realidade da insegurança alimentar é alarmante, afetando aproximadamente 125,2 milhões de brasileiros. Esses números representam um aumento de 7,2% em relação a 2020 e um preocupante crescimento de 60% em comparação com o ano de 2018.
           A situação revela um cenário desafiador e urgente, no qual milhões de pessoas enfrentam dificuldades para garantir o acesso adequado e regular a alimentos. A insegurança alimentar não apenas compromete a nutrição e saúde desses indivíduos, mas também impacta negativamente seu desenvolvimento social e econômico.
           É fundamental que medidas efetivas sejam tomadas para enfrentar esse problema, visando reduzir esses índices alarmantes e proporcionar condições dignas de alimentação para todos os brasileiros. Ações governamentais, parcerias com a sociedade civil e o engajamento de todos são essenciais para superar esse desafio e construir um país onde a fome seja apenas uma lembrança do passado.</p>
       </div>
-      <img class="mapa-Brasa" src="./img/image.png" alt="">
-      <img class="fome-brasa" src="./img/image (1).png" alt="">
+      <img class="mapa-Brasa" src="./img/image.png" alt="imagem de um gráfico que representa a fome no Brasil">
+      <img class="fome-brasa" src="./img/image (1).png" alt="imagem de vários icones de pessoas saudáveis e não saudáveis">
     </section>
 
     <section class="a5">
@@ -92,7 +92,7 @@
       <div class="textos">
         <p>A falta de acesso a alimentos saudáveis também é um problema significativo, com quase 3,1 bilhões de pessoas incapazes de arcar com uma alimentação adequada em 2020. Isso reflete os efeitos da inflação nos preços dos alimentos decorrentes da pandemia de covid-19 e das medidas adotadas para combatê-la.</p>
       </div>
-      <img class="frutas" src="./img/posts_2910.png" alt="">
+      <img class="frutas" src="./img/posts_2910.png" alt="imagem de uma pessoas fazendo contas na calculadora em um mercado">
     </section>
 
     <section class="a6">
@@ -100,7 +100,7 @@
       <div class="textos">
         <p>Além disso, milhões de crianças sofrem as consequências devastadoras da desnutrição. Estima-se que 45 milhões de crianças menores de 5 anos enfrentem desnutrição aguda, colocando-as em um risco significativamente maior de morte. Outras 149 milhões de crianças nessa faixa etária sofrem com atraso no crescimento e desenvolvimento devido à falta crônica de nutrientes essenciais.</p>
       </div>
-      <img class="fome-crianca" src="./img/20230122170116_f2374b53-1e95-4d28-8370-776cf44ff943.jpg" alt="">
+      <img class="fome-crianca" src="./img/20230122170116_f2374b53-1e95-4d28-8370-776cf44ff943.jpg" alt="imagens de pessoas de tribos indigenas que passam fome">
     </section>
 
     <section class="a7">
@@ -115,14 +115,14 @@
       <div class="textos">
         <p>Enfrentar a fome e garantir a segurança alimentar é uma responsabilidade compartilhada por governos, organizações internacionais, setor privado e sociedade civil. É fundamental adotar medidas que promovam a agricultura sustentável, reduzam as desigualdades sociais e econômicas e eliminem o desperdício alimentar. Somente assim poderemos assegurar que todas as pessoas tenham acesso a alimentos nutritivos e suficientes, vivendo com dignidade e em um mundo mais justo.</p>
       </div>
-      <img class="coperacao" src="./img/reciclagem-2.png" alt="">
+      <img class="coperacao" src="./img/reciclagem-2.png" alt="imagem de icones de pessoas dando as mãos">
     </section>
   </main>
   <footer>
     
     <h2>RM dos Integrantes</h2>
 
-    <a href="./index.html"><img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
+    <a href="./index.html"><img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo"></a>
 
 
     <div class="footer-class">
@@ -136,10 +136,10 @@
 
       <ul class="links-footer">
         <li><a href="./form-contato.html">Contate-nos</a></li>
-        <li><a href="/">Cultivo Eficiente</a></li>
-        <li><a href="/">IA Generativa</a></li>
+        <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+        <li><a href="./IA.html">IA Generativa</a></li>
         <li><a href="./apoie.html">Participe da Causa</a></li>
-        <li><a href="/">Agricultura Sustentável</a></li>
+        <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
       </ul>
 
