--- a/pg_final.html
+++ b/pg_final.html
@@ -17,14 +17,14 @@
 
     <header>
       <nav class="links">
-        <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
+        <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo"></a>
 
         <ul class="lista">
           <li><a href="./form-contato.html">Contate-nos</a></li>
           <li><a href="./apoie.html">Participe da Cusa</a></li>
-          <li><a href="">Cultivo Eficiente</a></li>
-          <li><a href="">IA Generativa</a></li>
-          <li><a href="">Agricultura Sustentável</a></li>
+          <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+          <li><a href="./IA.html">IA Generativa</a></li>
+          <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         </ul>
 
       </nav>
@@ -33,9 +33,9 @@
         <input type="checkbox" id="menu_toggle">
         <label class="menu_btn" for="menu_toggle"><span></span></label>
         <ul class="menu_box">
-          <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
-          <li><a class="menu_item" href="#">IA Generativa</a></li>
-          <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+          <li><a class="menu_item" href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+          <li><a class="menu_item" href="./IA.html">IA Generativa</a></li>
+          <li><a class="menu_item" href="./CULTIVO.html">Cultivo Eficiente</a></li>
           <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
           <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
         </ul>
@@ -47,10 +47,8 @@
 
 
       <aside>
-        <img class="img-aside" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
-        <p class="prg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde dignissimos sed </p>
-
-
+        <img class="img-aside" src="./img/WhatsApp Image 2023-06-06 at 19.55.08.jpeg" alt="imagem de uma mão regando um bro">
+        <p class="prg-1"><span class="span1">Eco</span><span class="span2">Byte</span>: Conectando produtores, escolas e esperança. Alimentando mentes, nutrindo corações</p>
 
       </aside>
 
@@ -60,19 +58,25 @@
 
         <h2 class="title-1">Secretarias Municipais Que Fazem Parte</h2>
         <ul class="lista2">
-          <li class="ja-cadastrado">Secretaria 1 - Mogi das Cruzes</li>
-          <li class="ja-cadastrado">Secretaria 2 - Arujá</li>
-          <li class="ja-cadastrado">Secretaria 3 - Itaquaquecetuba</li>
+          <li class="ja-cadastrado">Diretoria Regional de Educação do Ipiranga </li>
+          <li class="ja-cadastrado">Diretoria Regional de Educação Butantã</li>
+          <li class="ja-cadastrado">Diretoria Regional de Educação Santo Amaro</li>
         </ul>
 
         <h2 class="title-2">Agricultores Que Fazem Parte</h2>
         <ul class="lista2">
-          <li class="ja-cadastrado">Agricultor 1 - Mogi das Cruzes</li>
-          <li class="ja-cadastrado">Agricultor 2 - Arujá</li>
-          <li class="ja-cadastrado">Agricultor 3 - Itaquaquecetuba</li>
+          <li class="ja-cadastrado">Robson - Mogi das Cruzes</li>
+          <li class="ja-cadastrado">Luciano - Arujá</li>
+          <li class="ja-cadastrado">Gabriel - Itaquaquecetuba</li>
         </ul>
 
-        <p class="prg-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis fugiat, eaque impedit ipsam blanditiis cumque voluptatibus? Cumque quidem impedit nam, quia debitis inventore ut nemo ullam, doloribus, reiciendis excepturi.</p>
+        <hr>
+
+        <p class="prg-2">Aos participantes do projeto <span class="span1">Eco</span><span class="span2">Byte</span>,<br> <br>
+
+          Agradecemos profundamente por se juntarem a nós nessa iniciativa transformadora. Sua contribuição em direcionar alimentos excedentes para as escolas cadastradas é essencial. Vocês estão fazendo a diferença, levando nutrição e esperança às crianças e jovens. Agradecemos sua participação ativa e apoio contínuo. Vocês são verdadeiros heróis, deixando uma marca positiva na vida de muitas pessoas. Continuemos unidos nessa jornada de generosidade. Juntos, podemos alcançar um mundo com igualdade de oportunidades e redução do desperdício alimentar. Obrigado por fazerem parte do ECOBYTE. Seu comprometimento é inspirador. <br> <br>
+          
+          Equipe <span class="span1">Eco</span><span class="span2">Byte</span></p>
 
 
       </section>
@@ -83,7 +87,7 @@
 
   <footer>
 
-    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
+    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo">
 
     <h2>RM dos Integrantes</h2>
 
@@ -98,10 +102,10 @@
 
       <ul class="links-footer">
         <li><a href="./form-contato.html">Contate-nos</a></li>
-        <li><a href="">Cultivo Eficiente</a></li>
+        <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
         <li><a href="./apoie.html"> Participe da Causa</a></li>
-        <li><a href="">IA Generativa</a></li>
-        <li><a href="">Agricultura Sustentável</a></li>
+        <li><a href="./IA.html">IA Generativa</a></li>
+        <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
       </ul>
 
@@ -109,7 +113,7 @@
 
 
     <div class="footer">
-      <h3>₢Todos os direitos reservados a <span class="span1">Eco<span><span class="span2">Byte<span></span></h3>
+      <h3>₢Todos os direitos reservados a <span class="span1">Eco</span><span class="span2">Byte</span></h3>
 
     </div>
 
