--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -17,16 +17,27 @@
 
   <header>
     <nav class="links">
-      <a class="Logo" href="./index.html"><img src="./img/Logo.png" alt=""></a>
+      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo"></a>
 
       <ul class="lista">
         <li><a href="./form-contato.html">Contate-nos</a></li>
         <li><a href="./apoie.html">Participe da Cusa</a></li>
-        <li><a href="">Cultivo Eficiente</a></li>
-        <li><a href="">IA Generativa</a></li>
-        <li><a href="">Agricultura Sustentável</a></li>
+        <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+        <li><a href="./IA.html">IA Generativa</a></li>
+        <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
       </ul>
 
+    </nav>
+    <nav class="hamburger-menu">
+      <input type="checkbox" id="menu_toggle">
+      <label class="menu_btn" for="menu_toggle"><span></span></label>
+      <ul class="menu_box">
+        <li><a class="menu_item" href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+        <li><a class="menu_item" href="./IA.html">IA Generativa</a></li>
+        <li><a class="menu_item" href="./CULTIVO.html">Cultivo Eficiente</a></li>
+        <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
+        <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
+      </ul>
     </nav>
 
   </header>
@@ -60,20 +71,20 @@
 
     <section>
       <div class="caixa-in-e">
-        <img id="gabi" class="fte" src="./img/Gabi.png" alt="">
+        <img id="gabi" class="fte" src="./img/Gabi.png" alt="imagem de uma menina">
         <hr class="linha">
         <div class="textoe">
           <h2>Gabrielle Stanguinni</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 98786</h3>
           <h3 class="h3i">Idade: 18</h3>
         </div>
       </div>
       <section class="sec-gabi">
         <div class="logo-social-gabi">
-          <a href=""><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt=""></a>
-          <a href=""><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt=""></a>
-          <a href=""><img class="git" src="./img/github_git_icon_145985.png" alt=""></a>
+          <a href=""><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt="icone do instagram"></a>
+          <a href=""><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt="icone linkedin"></a>
+          <a href=""><img class="git" src="./img/github_git_icon_145985.png" alt="icone github"></a>
         </div>
       </section>
 
@@ -81,20 +92,20 @@
       <div class="caixa-in">
         <div class="textod">
           <h2>Lucca Rinaldi Valladão Freitas</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 98207</h3>
           <h3 class="h3i">Idade: 18</h3>
         </div>
         <hr class="linha">
-        <img id="lucca" class="ftd" src="./img/Lucca.png" alt="">
+        <img id="lucca" class="ftd" src="./img/Lucca.png" alt="imagem de um menino">
       </div>
 
       <div class="caixa-in-mobile">
-        <img class="ftd" src="./img/Lucca.png" alt="">
+        <img class="ftd" src="./img/Lucca.png" alt="imagem de um menino">
         <hr class="linha">
         <div class="textod">
           <h2>Lucca Rinaldi Valladão Freitas</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 98207</h3>
           <h3 class="h3i">Idade: 18</h3>
         </div>
@@ -104,28 +115,28 @@
 
       <section class="sec-lucca">
         <div class="logo-social-lucca">
-          <a href=""><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt=""></a>
-          <a href=""><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt=""></a>
-          <a href=""><img class="git" src="./img/github_git_icon_145985.png" alt=""></a>
+          <a href=""><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt="icone do instagram"></a>
+          <a href=""><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt="icone linkedin"></a>
+          <a href=""><img class="git" src="./img/github_git_icon_145985.png" alt="icone github"></a>
         </div>
       </section>
 
 
       <div class="caixa-in-e">
-        <img id="maria" class="fte" src="./img/Maria.png" alt="">
+        <img id="maria" class="fte" src="./img/Maria.png" alt="imagem de uma menina">
         <hr class="linha">
         <div class="textoe">
           <h2 >Maria Fernanda Ribeiro Mello</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 98818</h3>
           <h3 class="h3i">Idade: 18</h3>
         </div>
       </div>
       <section class="sec-maria">
         <div class="logo-social-maria">
-          <a href="https://www.instagram.com/mnandamello/"><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt=""></a>
-          <a href="https://www.linkedin.com/in/maria-fernanda-b31526243/"><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt=""></a>
-          <a href="https://github.com/mnandamello"><img class="git" src="./img/github_git_icon_145985.png" alt=""></a>
+          <a href="https://www.instagram.com/mnandamello/"><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt="icone do instagram"></a>
+          <a href="https://www.linkedin.com/in/maria-fernanda-b31526243/"><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt="icone linkedin"></a>
+          <a href="https://github.com/mnandamello"><img class="git" src="./img/github_git_icon_145985.png" alt="icone github"></a>
         </div>
       </section>
 
@@ -134,20 +145,20 @@
       <div class="caixa-in">
         <div class="textod">
           <h2 >Nicolas Reis do Espirito Santo</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 98819</h3>
           <h3 class="h3i">Idade: 19</h3>
         </div>
         <hr class="linha">
-        <img id="nicolas" class="ftd" src="./img/Nicolas.png" alt="">
+        <img id="nicolas" class="ftd" src="./img/Nicolas.png" alt="imagem de um menino">
       </div>
 
       <div class="caixa-in-mobile">
-        <img class="ftd" src="./img/Nicolas.png" alt="">
+        <img class="ftd" src="./img/Nicolas.png" alt="imagem de um menino">
         <hr class="linha">
         <div class="textod">
           <h2>Nicolas Reis do Espirito Santo</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 98819</h3>
           <h3 class="h3i">Idade: 19</h3>
         </div>
@@ -156,28 +167,28 @@
       </div>
       <section class="sec-nicolas">
         <div class="logo-social-nicolas">
-          <a href="https://www.instagram.com/nicolasrreis/"><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt=""></a>
-          <a href="https://www.linkedin.com/in/nicolas-reis-441167248/"><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt=""></a>
-          <a href="https://github.com/Nreis280"><img class="git" src="./img/github_git_icon_145985.png" alt=""></a>
+          <a href="https://www.instagram.com/nicolasrreis/"><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt="icone do instagram"></a>
+          <a href="https://www.linkedin.com/in/nicolas-reis-441167248/"><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt="icone linkedin"></a>
+          <a href="https://github.com/Nreis280"><img class="git" src="./img/github_git_icon_145985.png" alt="icone github"></a>
         </div>
       </section>
 
 
       <div class="caixa-in-e">
-        <img id="renan" class="fte" src="./img/Renan.png" alt="">
+        <img id="renan" class="fte" src="./img/Renan.png" alt="imagem de um menino">
         <hr class="linha">
         <div class="textoe">
           <h2>Renan Vieira de Jesus</h2>
-          <h3 class="curso">Analise e desenvolvimento de sistemas - 1TDSA</h3>
+          <h3 class="curso">Análise e Desenvolvimento de Sistemas - 1TDSA</h3>
           <h3 class="h3r">RM: 551813</h3>
           <h3 class="h3i">Idade: 18</h3>
         </div>
       </div>
       <section class="sec-renan">
         <div class="logo-social-renan">
-          <a href=""><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt=""></a>
-          <a href=""><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt=""></a>
-          <a href=""><img class="git" src="./img/github_git_icon_145985.png" alt=""></a>
+          <a href=""><img class="social" src="./img/instagram_black_logo_icon_147122 (1).png" alt="icone do instagram"></a>
+          <a href=""><img class="social" src="./img/linkedin_black_logo_icon_147114.png" alt="icone linkedin"></a>
+          <a href=""><img class="git" src="./img/github_git_icon_145985.png" alt="icone github"></a>
         </div>
       </section>
     </section>
@@ -185,7 +196,7 @@
 
   </main>
   <footer>
-    <a href="./index.html"><img class="img-footer" src="./img/Logo.png" alt=""></a>
+    <a href="./index.html"><img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo"></a>
 
     <div class="footer-class">
       <ul class="nomes">
@@ -198,10 +209,10 @@
 
       <ul class="links-footer">
         <li><a href="./form-contato.html">Contate-nos</a></li>
-        <li><a href="/">Cultivo Eficiente</a></li>
-        <li><a href="/">IA Generativa</a></li>
+        <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+        <li><a href="./IA.html">IA Generativa</a></li>
         <li><a href="./apoie.html">Participe da Causa</a></li>
-        <li><a href="/">Agricultura Sustentável</a></li>
+        <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
       </ul>
 
@@ -217,7 +228,7 @@
     </main>
   </footer>
 
-
+  <script src="./Js/script.js"></script>
 
 </body>
 
