--- a/form-contato.html
+++ b/form-contato.html
@@ -15,14 +15,14 @@
 
       <header>
         <nav class="links">
-          <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
+          <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo"></a>
     
           <ul class="lista">
             <li><a href="./form-contato.html">Contate-nos</a></li>
             <li><a href="./apoie.html">Participe da Cusa</a></li>
-            <li><a href="">Cultivo Eficiente</a></li>
-            <li><a href="">IA Generativa</a></li>
-            <li><a href="">Agricultura Sustentável</a></li>
+            <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
+            <li><a href="./IA.html">IA Generativa</a></li>
+            <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
           </ul>
     
         </nav>
@@ -31,9 +31,9 @@
           <input type="checkbox" id="menu_toggle">
           <label class="menu_btn" for="menu_toggle"><span></span></label>
           <ul class="menu_box">
-            <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
-            <li><a class="menu_item" href="#">IA Generativa</a></li>
-            <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+            <li><a class="menu_item" href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+            <li><a class="menu_item" href="./IA.html">IA Generativa</a></li>
+            <li><a class="menu_item" href="./CULTIVO.html">Cultivo Eficiente</a></li>
             <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
             <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
           </ul>
@@ -112,7 +112,7 @@
 
     <footer>
 
-      <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
+      <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="logo">
   
       <h2>RM dos Integrantes</h2>
   
@@ -127,10 +127,10 @@
   
         <ul class="links-footer">
           <li><a href="./form-contato.html">Contate-nos</a></li>
-          <li><a href="">Cultivo Eficiente</a></li>
+          <li><a href="./CULTIVO.html">Cultivo Eficiente</a></li>
           <li><a href="./apoie.html"> Participe da Causa</a></li>
-          <li><a href="">IA Generativa</a></li>
-          <li><a href="">Agricultura Sustentável</a></li>
+          <li><a href="./IA.html">IA Generativa</a></li>
+          <li><a href="./agricultura-sustentavel.html">Agricultura Sustentável</a></li>
           <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
         </ul>
   
